Добавляет настройки vscode

--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
 <body>
      <!--Шапка сайта-->
     <header class="header">
-        <div class="container top-line">
-            <nav class="nav">
-                <a href="./index.html" class="logo link">
-                    Web<span class="accent">Studio</span>
+        <div class="container header__container">
+            <nav class="header__nav">
+                <a href="./index.html" class="header__logo">
+                    Web<span class="header__logo--accent">Studio</span>
                 </a>
-                <ul class="site-nav list">
-                    <li class="item current"><a class="link current" href="./index.html">Студия</a></li>
-                    <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
-                    <li class="item"><a class="link" href="">Контакты</a></li>
+                <ul class="header__list">
+                    <li class="header__item header__item--current"><a class="header__link header__link--current" href="./index.html">Студия</a></li>
+                    <li class="header__item"><a class="header__link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="header__item"><a class="header__link" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="contacs-nav list">
-                <li class="item">
-                    <a class="link" href="mailto:info@devstudio.com">
-                        <svg class="envelope">
+            <ul class="header__list">
+                <li class="header__item">
+                    <a class="header__link header__link--color" href="mailto:info@devstudio.com">
+                        <svg class="header-icon">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link" href="tel:+380961111111">
-                        <svg class="smartphone">
+                <li class="header__item">
+                    <a class="header__link header__link--color" href="tel:+380961111111">
+                        <svg class="header-icon header-icon--size">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
@@ -122,13 +122,13 @@
         <section class="section section-team">
             <div class="container">
                 <h2 class="title">Наша команда</h2>
-                <ul class="list">
+                <ul class="section-team__list">
                     <li class="item">
                         <img class="foto" src="./images/team/photo1.jpg" alt="Фото дизайнера продукта" width="270" height="260">
                         <div class="description-foto">
                             <h3 class="name">Игорь Демьяненко</h3>
                             <p class="text" lang="en">Product Designer</p>
-                            <ul class="list">
+                            <ul class="section-team__list">
                                 <li class="item-social">
                                     <a class="social" href="">
                                         <svg class="social-icon">
@@ -165,7 +165,7 @@
                         <div class="description-foto">
                             <h3 class="name">Ольга Репина</h3>
                             <p class="text" lang="en">Frontend Developer</p>    
-                            <ul class="list">
+                            <ul class="section-team__list">
                                 <li class="item-social">
                                     <a class="social" href="">
                                         <svg class="social-icon">
@@ -202,7 +202,7 @@
                         <div class="description-foto">
                             <h3 class="name">Николай Тарасов</h3>
                             <p class="text" lang="en">Marketing</p>
-                            <ul class="list">
+                            <ul class="section-team__list">
                                 <li class="item-social">
                                     <a class="social" href="">
                                         <svg class="social-icon">
@@ -239,7 +239,7 @@
                         <div class="description-foto">
                             <h3 class="name">Михаил Ермаков</h3>
                             <p class="text" lang="en">UI Designer</p>
-                            <ul class="list">
+                            <ul class="section-team__list">
                                 <li class="item-social">
                                     <a class="social" href="">
                                         <svg class="social-icon">
