--- a/portfolio.html
+++ b/portfolio.html
@@ -12,29 +12,29 @@
 <body>
     <!--Шапка сайта-->
     <header class="header">
-        <div class="container top-line">
-            <nav class="nav">
-                <a href="./index.html" class="logo link">
-                    Web<span class="accent">Studio</span>
+        <div class="container header__container">
+            <nav class="header__nav">
+                <a href="./index.html" class="header__logo">
+                    Web<span class="header__logo--accent">Studio</span>
                 </a>
-                <ul class="site-nav list">
-                    <li class="item"><a class="link" href="./index.html">Студия</a></li>
-                    <li class="item current"><a class="link current" href="./portfolio.html">Портфолио</a></li>
-                    <li class="item"><a class="link" href="">Контакты</a></li>
+                <ul class="header__list">
+                    <li class="header__item"><a class="header__link" href="./index.html">Студия</a></li>
+                    <li class="header__item header__item--current"><a class="header__link header__link--current" href="./portfolio.html">Портфолио</a></li>
+                    <li class="header__item"><a class="header__link" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="contacs-nav list">
-                <li class="item">
-                    <a class="link" href="mailto:info@devstudio.com">
-                        <svg class="envelope">
+            <ul class="header__list">
+                <li class="header__item">
+                    <a class="header__link header__link--color" href="mailto:info@devstudio.com">
+                        <svg class="header-icon">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
                     </a>
                 </li>
-                <li class="item">
-                    <a class="link" href="tel:+380961111111">
-                        <svg class="smartphone">
+                <li class="header__item">
+                    <a class="header__link header__link--color" href="tel:+380961111111">
+                        <svg class="header-icon header-icon--size">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
@@ -44,106 +44,106 @@
         </div>
     </header>
         <main>
-            <section class="section section-portfolio">
+            <section class="section-portfolio">
                 <div class="container">
                     <!--Фильтры-->
-                    <ul class="list-buttons">
-                        <li class="item"><button class="button-portfolio" type="button">Все</button></li>
-                        <li class="item"><button class="button-portfolio" type="button">Веб-сайты</button></li>
-                        <li class="item"><button class="button-portfolio" type="button">Приложения</button></li>
-                        <li class="item"><button class="button-portfolio" type="button">Дизайн</button></li>
-                        <li class="item"><button class="button-portfolio" type="button">Маркетинг</button></li>
+                    <ul class="section-portfolio__list-buttons">
+                        <li class="section-portfolio__item--indent"><button class="section-portfolio__button" type="button">Все</button></li>
+                        <li class="section-portfolio__item--indent"><button class="section-portfolio__button" type="button">Веб-сайты</button></li>
+                        <li class="section-portfolio__item--indent"><button class="section-portfolio__button" type="button">Приложения</button></li>
+                        <li class="section-portfolio__item--indent"><button class="section-portfolio__button" type="button">Дизайн</button></li>
+                        <li class="section-portfolio__item--indent"><button class="section-portfolio__button" type="button">Маркетинг</button></li>
                     </ul>
                     <!--Портфолио-->
-                    <ul class="list-img">
-                        <li class="item">
-                            <div class="picture-and-overlay">
-                                <img class="picture" src="./images/portfolio/img7.jpg" alt="Экран ноутбука с сайтом" width="370" height="294">
-                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    <ul class="section-portfolio__list">
+                        <li class="section-portfolio__item">
+                            <div class="section-portfolio__div--position">
+                                <img class="section-portfolio__picture" src="./images/portfolio/img7.jpg" alt="Экран ноутбука с сайтом" width="370" height="294">
+                                <p class="section-portfolio__overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                             </div>
-                            <div class="title-text">
-                                <h3 class="title">Технокряк</h3>
-                                <p class="text">Веб-сайт</p>
+                            <div class="section-portfolio__div">
+                                <h3 class="section-portfolio__title">Технокряк</h3>
+                                <p class="section-portfolio__text">Веб-сайт</p>
                             </div>  
                         </li>
-                        <li class="item">
-                            <div class="picture-and-overlay">
-                                <img class="picture" src="./images/portfolio/img8.jpg" alt="Постер" width="370" height="294"> 
-                                <p class="overlay">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus distinctio eaque cumque, eum necessitatibus architecto libero cupiditate, esse itaque optio, maxime fugit quaerat sint non dolore tenetur. Ipsum, mollitia magni?</p>
+                        <li class="section-portfolio__item">
+                            <div class="section-portfolio__div--position">
+                                <img class="section-portfolio__picture" src="./images/portfolio/img8.jpg" alt="Постер" width="370" height="294"> 
+                                <p class="section-portfolio__overlay">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus distinctio eaque cumque, eum necessitatibus architecto libero cupiditate, esse itaque optio, maxime fugit quaerat sint non dolore tenetur. Ipsum, mollitia magni?</p>
                             </div>
-                            <div class="title-text">
-                                <h3 class="title">Постер New Orlean vs Golden Star</h3>
-                                <p class="text">Дизайн</p>
-                            </div>
-                        </li>
-                        <li class="item">
-                            <div class="picture-and-overlay">
-                                <img class="picture" src="./images/portfolio/img9.jpg" alt="Логотип ресторана Seefood" width="370" height="294">
-                                <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum nisi eaque delectus consequuntur aliquam quam totam numquam mollitia? Eligendi eum consequatur ratione soluta deserunt commodi dolor sapiente tenetur. Aut, vitae!</p>
-                            </div>
-                            <div class="title-text">
-                                <h3 class="title">Ресторан Seafood</h3>
-                                <p class="text">Приложение</p>
+                            <div class="section-portfolio__div">
+                                <h3 class="section-portfolio__title">Постер New Orlean vs Golden Star</h3>
+                                <p class="section-portfolio__text">Дизайн</p>
                             </div>
                         </li>
-                        <li class="item">
-                            <div class="picture-and-overlay">
-                                <img class="picture" src="./images/portfolio/img10.jpg" alt="Наушники" width="370" height="294">
-                                <p class="overlay">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi corporis sint quibusdam aut alias quidem, neque, obcaecati dolorem possimus vitae consequatur dolore mollitia porro reprehenderit inventore! Quam maxime consequatur et!</p>
+                        <li class="section-portfolio__item">
+                            <div class="section-portfolio__div--position">
+                                <img class="section-portfolio__picture" src="./images/portfolio/img9.jpg" alt="Логотип ресторана Seefood" width="370" height="294">
+                                <p class="section-portfolio__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum nisi eaque delectus consequuntur aliquam quam totam numquam mollitia? Eligendi eum consequatur ratione soluta deserunt commodi dolor sapiente tenetur. Aut, vitae!</p>
                             </div>
-                            <div class="title-text">
-                                <h3 class="title">Проект Prime</h3>
-                                <p class="text">Маркетинг</p>
-                            </div>
-                        </li>
-                        <li class="item">
-                            <div class="picture-and-overlay">
-                                <img class="picture" src="./images/portfolio/img11.jpg" alt="Две коробки" width="370" height="294">
-                                <p class="overlay">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia animi quibusdam voluptatibus hic suscipit reiciendis consequatur. Facere, dolore. Assumenda, facere! Laborum molestias deserunt ea consequuntur, error nobis quo explicabo laboriosam!</p>
-                            </div>
-                            <div class="title-text">
-                                <h3 class="title">Проект Boxes</h3>
-                                <p class="text">Приложение</p>
+                            <div class="section-portfolio__div">
+                                <h3 class="section-portfolio__title">Ресторан Seafood</h3>
+                                <p class="section-portfolio__text">Приложение</p>
                             </div>
                         </li>
-                        <li class="item">
-                            <div class="picture-and-overlay">
-                                <img class="picture" src="./images/portfolio/img12.jpg" alt="Экран монитора с сайтом" width="370" height="294">
-                                <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ipsa maiores deserunt nostrum nihil aperiam iste earum, quisquam corrupti exercitationem esse laudantium ratione adipisci officia assumenda quasi eum, nesciunt explicabo.</p>
+                        <li class="section-portfolio__item">
+                            <div class="section-portfolio__div--position">
+                                <img class="section-portfolio__picture" src="./images/portfolio/img10.jpg" alt="Наушники" width="370" height="294">
+                                <p class="section-portfolio__overlay">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi corporis sint quibusdam aut alias quidem, neque, obcaecati dolorem possimus vitae consequatur dolore mollitia porro reprehenderit inventore! Quam maxime consequatur et!</p>
                             </div>
-                            <div class="title-text">
-                                <h3 class="title" lang="en">Inspiration has no Borders</h3>
-                                <p class="text">Веб-сайт</p>
-                            </div>
-                        </li>
-                        <li class="item">
-                            <div class="picture-and-overlay">
-                                <img  class="picture" src="./images/portfolio/img13.jpg" alt="Открытый журнал" width="370" height="294">
-                                <p class="overlay">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit sit perspiciatis aliquid a consectetur molestiae saepe eos, quis velit nostrum minima voluptas dignissimos obcaecati ipsum autem reiciendis recusandae possimus dolorem.</p>
-                            </div>
-                            <div class="title-text">
-                                <h3 class="title">Издание Limited Edition</h3>
-                                <p class="text">Дизайн</p>
+                            <div class="section-portfolio__div">
+                                <h3 class="section-portfolio__title">Проект Prime</h3>
+                                <p class="section-portfolio__text">Маркетинг</p>
                             </div>
                         </li>
-                        <li class="item">
-                            <div class="picture-and-overlay">
-                                <img class="picture" src="./images/portfolio/img14.jpg" alt="Бирка с логотипом проекта LAB" width="370" height="294">
-                                <p class="overlay">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error qui velit consequuntur cum quaerat blanditiis odio nam assumenda est vitae! Quasi, blanditiis totam laborum ea nobis libero alias. Veritatis, repellendus.</p>
+                        <li class="section-portfolio__item">
+                            <div class="section-portfolio__div--position">
+                                <img class="section-portfolio__picture" src="./images/portfolio/img11.jpg" alt="Две коробки" width="370" height="294">
+                                <p class="section-portfolio__overlay">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia animi quibusdam voluptatibus hic suscipit reiciendis consequatur. Facere, dolore. Assumenda, facere! Laborum molestias deserunt ea consequuntur, error nobis quo explicabo laboriosam!</p>
                             </div>
-                            <div class="title-text">
-                                <h3 class="title">Проект LAB</h3>
-                                <p class="text">Маркетинг</p>
+                            <div class="section-portfolio__div--position">
+                                <h3 class="section-portfolio__title">Проект Boxes</h3>
+                                <p class="section-portfolio__text">Приложение</p>
                             </div>
                         </li>
-                        <li class="item">
-                            <div class="picture-and-overlay">
-                                <img class="picture" src="./images/portfolio/img15.jpg" alt="Ноутбук с открытым приложением" width="370" height="294">
-                                <p class="overlay">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, repellat, similique eius eaque quisquam fugit unde quod ab nobis vitae eligendi minima quae excepturi ullam nulla! Earum dignissimos aut ad.</p>
+                        <li class="section-portfolio__item">
+                            <div class="section-portfolio__div--position">
+                                <img class="section-portfolio__picture" src="./images/portfolio/img12.jpg" alt="Экран монитора с сайтом" width="370" height="294">
+                                <p class="section-portfolio__overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ipsa maiores deserunt nostrum nihil aperiam iste earum, quisquam corrupti exercitationem esse laudantium ratione adipisci officia assumenda quasi eum, nesciunt explicabo.</p>
                             </div>
-                            <div class="title-text">
-                                <h3 class="title">Growing Business</h3>
-                                <p class="text">Приложение</p>
+                            <div class="section-portfolio__div">
+                                <h3 class="section-portfolio__title" lang="en">Inspiration has no Borders</h3>
+                                <p class="section-portfolio__text">Веб-сайт</p>
+                            </div>
+                        </li>
+                        <li class="section-portfolio__item">
+                            <div class="section-portfolio__div--position">
+                                <img  class="section-portfolio__picture" src="./images/portfolio/img13.jpg" alt="Открытый журнал" width="370" height="294">
+                                <p class="section-portfolio__overlay">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit sit perspiciatis aliquid a consectetur molestiae saepe eos, quis velit nostrum minima voluptas dignissimos obcaecati ipsum autem reiciendis recusandae possimus dolorem.</p>
+                            </div>
+                            <div class="section-portfolio__div">
+                                <h3 class="section-portfolio__title">Издание Limited Edition</h3>
+                                <p class="section-portfolio__text">Дизайн</p>
+                            </div>
+                        </li>
+                        <li class="section-portfolio__item">
+                            <div class="section-portfolio__div--position">
+                                <img class="section-portfolio__picture" src="./images/portfolio/img14.jpg" alt="Бирка с логотипом проекта LAB" width="370" height="294">
+                                <p class="section-portfolio__overlay">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error qui velit consequuntur cum quaerat blanditiis odio nam assumenda est vitae! Quasi, blanditiis totam laborum ea nobis libero alias. Veritatis, repellendus.</p>
+                            </div>
+                            <div class="section-portfolio__div">
+                                <h3 class="section-portfolio__title">Проект LAB</h3>
+                                <p class="section-portfolio__text">Маркетинг</p>
+                            </div>
+                        </li>
+                        <li class="section-portfolio__item">
+                            <div class="section-portfolio__div--position">
+                                <img class="section-portfolio__picture" src="./images/portfolio/img15.jpg" alt="Ноутбук с открытым приложением" width="370" height="294">
+                                <p class="section-portfolio__overlay">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, repellat, similique eius eaque quisquam fugit unde quod ab nobis vitae eligendi minima quae excepturi ullam nulla! Earum dignissimos aut ad.</p>
+                            </div>
+                            <div class="section-portfolio__div">
+                                <h3 class="section-portfolio__title">Growing Business</h3>
+                                <p class="section-portfolio__text">Приложение</p>
                             </div>
                         </li>
                     </ul>
