Добавляет классы согласно БЭМ в футере

--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
                 <address>
                     <ul class="footer__list">
                         <li class="footer__text">г. Киев, пр-т Леси Украинки, 26</li>
-                        <li><a class="footer__link" href="mailto:info@example.com">info@example.com</a></li>
-                        <li><a class="footer__link footer__link--position" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                        <li><a class="footer__contact" href="mailto:info@example.com">info@example.com</a></li>
+                        <li><a class="footer__contact footer__contact--position" href="tel:+380991111111">+38 099 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
@@ -372,10 +372,10 @@
             </div>
             <div>
                 <p class="footer__appeal">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
-                <form class="form-footer">
-                    <input class="footer-input" type="email" name="email" placeholder="E-mail"/>
-                    <button type="submit" class="button-footer-submit">Подписаться
-                        <svg class="send" width="24px" height="24px">
+                <form class="footer__form">
+                    <input class="footer__input" type="email" name="email" placeholder="E-mail"/>
+                    <button type="submit" class="footer__button">Подписаться
+                        <svg class="footer__icon--margin" width="24px" height="24px">
                             <use href="./images/icons.svg#icon-send"></use>
                         </svg>
                     </button>
@@ -385,7 +385,7 @@
     </footer>
     <div class="backdrop" data-modal>
         <div class="modal-window">
-            <button class="modal-button" type="button" data-modal-close>
+            <button class="modal-window__button" type="button" data-modal-close>
                 <svg class="icon-close" width="18px" height="18px">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
