--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body class="body">
      <!--Шапка сайта-->
     <header class="header">
         <div class="container header__container">
@@ -26,7 +26,7 @@
             <ul class="header__list">
                 <li class="header__item">
                     <a class="header__link header__link--color" href="mailto:info@devstudio.com">
-                        <svg class="header-icon">
+                        <svg class="header__icon">
                             <use href="./images/icons.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
@@ -34,7 +34,7 @@
                 </li>
                 <li class="header__item">
                     <a class="header__link header__link--color" href="tel:+380961111111">
-                        <svg class="header-icon header-icon--size">
+                        <svg class="header__icon header__icon--size">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
@@ -386,55 +386,55 @@
     <div class="backdrop" data-modal>
         <div class="modal-window">
             <button class="modal-window__button" type="button" data-modal-close>
-                <svg class="icon-close" width="18px" height="18px">
+                <svg class="modal-window__icon" width="18px" height="18px">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
-            <form action="#" class="modal-form">
-                <p class="modal-window-text">Оставьте свои данные, мы вам перезвоним</p>
-                <label class="modal-label">
+            <form action="#" class="form">
+                <p class="form__text">Оставьте свои данные, мы вам перезвоним</p>
+                <label class="form__label">
                     Имя
-                    <span class="modal-input-and-icon">
-                        <input type="text" name="user-name" class="modal-input" minlength="2" required>
-                        <svg class="modal-icon" width="18px" height="18px">
+                    <span class="form__block">
+                        <input type="text" name="user-name" class="form__input" minlength="2" required>
+                        <svg class="form__icon" width="18px" height="18px">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
                     </span>
                 </label>
-                <label class="modal-label">
+                <label class="form__label">
                     Телефон
-                    <span class="modal-input-and-icon">
-                        <input type="tel" name="user-telephone" class="modal-input" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="000-000-00-00" required>
-                        <svg class="modal-icon" width="18px" height="18px">
+                    <span class="form__block">
+                        <input type="tel" name="user-telephone" class="form__input" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="000-000-00-00" required>
+                        <svg class="form__icon" width="18px" height="18px">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </span>
                 </label>
-                <label class="modal-label">
+                <label class="form__label">
                     Почта
-                    <span class="modal-input-and-icon">
-                        <input type="email" name="user-email" class="modal-input" required>
-                        <svg class="modal-icon" width="18px" height="18px">
+                    <span class="form__block">
+                        <input type="email" name="user-email" class="form__input" required>
+                        <svg class="form__icon" width="18px" height="18px">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
                     </span>
                 </label>
-                <label class="modal-label">
+                <label class="form__label">
                     Комментарий
-                    <textarea class="modal-message" name="user-message" placeholder="Введите текст"></textarea>
+                    <textarea class="form__message" name="user-message" placeholder="Введите текст"></textarea>
                 </label>
-                <input type="checkbox" name="user-agreement" class="modal-checkbox visualy-hidden" id="modal-checkbox" required>
-                <label for="modal-checkbox" class="modal-label-checkbox">
-                    <svg class="checkbox-square" width="16px" height="15px">
+                <input type="checkbox" name="user-agreement" class="form__checkbox--view visualy-hidden" id="modal-checkbox" required>
+                <label for="modal-checkbox" class="form__checkbox">
+                    <svg class="form__checkbox-square" width="16px" height="15px">
                         <use href="./images/icons.svg#icon-square"></use>
                     </svg>
-                    <svg class="checkbox-mark" width="16px" height="15px">
+                    <svg class="form__checkbox-mark" width="16px" height="15px">
                         <use href="./images/icons.svg#icon-check"></use>
                     </svg>
                     Соглашаюсь с рассылкой и принимаю 
-                    <a href="" class="modal-link">Условия договора</a>
+                    <a href="" class="form__link">Условия договора</a>
                 </label>
-                <button type="submit" class="modal-form-button">Отправить</button>
+                <button type="submit" class="form__button">Отправить</button>
             </form> 
             
         </div>
